# tasca

./: .gitignore  Cargo.toml  tasca.db
src/: main.rs
src/app_state/: actions.rs  mod.rs
src/db/: expense_repo.rs  mod.rs  schema.rs
src/models/: expense.rs
src/tui/: app_input.rs  handler.rs  mod.rs  view.rs
