[package]
name = "tasca"
version = "0.1.0"
edition = "2024"
description = "A lightweight terminal-based money tracker"
readme = "README.md"
authors = ["Antonio Angelini" ]

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
ratatui = "0.29.0"
rusqlite = "0.37.0"
time = { version = "0.3.44", features = ["formatting", "parsing", "macros", "serde", "local-offset", "rand", "quickcheck", "std"] }
tui-input = "0.14.0"
